--- a/reliability/MainWindow.xaml
+++ b/reliability/MainWindow.xaml
@@ -7,8 +7,7 @@
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance reliability:MainWindowVM}"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:charting="clr-namespace:System.Windows.Forms.DataVisualization.Charting;assembly=System.Windows.Forms.DataVisualization"
-        SizeToContent="WidthAndHeight" Loaded="MainWindow_OnLoaded"
+        SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterScreen" Title="Отказоустойчивость">
     <Grid>
         <Grid.RowDefinitions>
@@ -50,28 +49,15 @@
         <TextBlock Grid.Row="6" Grid.Column="0" Text="Среднее время жизни системы:" Margin="5"/>
         <TextBox Grid.Row="6" Grid.Column="1" Margin="5" Text="{Binding T}"/>
 
-        <Button Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="4" HorizontalContentAlignment="Right" Height="24" Content="Произвести вычисления"  HorizontalAlignment="Right" Margin="5" Command="{Binding CalculateCommand}" IsDefault="True"/>
+        <StackPanel Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="4" Orientation="Horizontal" HorizontalAlignment="Right">
+            <!--<ProgressBar Name="ProgressBar" Width="200" Height="25" Value="{Binding ProgressValue}" Maximum="200" Minimum="0"/>-->
+            <Button HorizontalContentAlignment="Right" Height="24" Content="Произвести вычисления"  HorizontalAlignment="Right" Margin="5" Command="{Binding CalculateCommand}" IsDefault="True"/>
+        </StackPanel>
 
         <StackPanel Grid.Row="0" Grid.Column="2" Grid.RowSpan="2" Margin="5">
             <RadioButton Content="Система типа А" IsChecked="{Binding FirstTypeSystem, UpdateSourceTrigger=PropertyChanged}"/>
             <RadioButton Content="Система типа Б" IsChecked="{Binding SecondTypeSystem, UpdateSourceTrigger=PropertyChanged}"/>
         </StackPanel>
-
-        <!--<TabControl Grid.Row="0" Grid.Column="3" Grid.RowSpan="8" MinWidth="500" MinHeight="400">
-            <TabItem Header="График">
-                <WindowsFormsHost>
-                    <charting:Chart x:Name="ResultChart" />
-                </WindowsFormsHost>
-            </TabItem>
-            --><!--<TabItem Header="Таблица">
-                <DataGrid ItemsSource="{Binding PTs}">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Binding="{Binding Value}" Header="Значение"/>
-                    </DataGrid.Columns>
-                </DataGrid>
-            </TabItem>--><!--
-        </TabControl>-->
-
 
     </Grid>
 </Window>
