--- a/reliability/ReportViewreControl.xaml
+++ b/reliability/ReportViewreControl.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="reliability.ReportViewreControl"
+﻿<UserControl x:Class="reliability.ReportViewreControl"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ReportViewreControl" Height="300" Width="300"
+        Height="300" Width="300"
         xmlns:rv="clr-namespace:Microsoft.Reporting.WinForms;assembly=Microsoft.ReportViewer.WinForms">
     <Grid>
         <WindowsFormsHost>
@@ -10,4 +10,4 @@
             </rv:ReportViewer>
             </WindowsFormsHost>
     </Grid>
-</Window>
+</UserControl>
